Fix issue with menu 'more' button wrapping to new line.

--- a/sass/navigation/_menu-main-navigation.scss
+++ b/sass/navigation/_menu-main-navigation.scss
@@ -3,7 +3,7 @@
 .main-navigation {
 
 	margin-top: #{0.25 * $size__spacing-unit};
-
+	display: flex;
 
 	@include media(tablet) {
 		margin-left: $size__site-margins;
